Layout fixes to remove scrollbars

--- a/angular-ui/src/app/components/artifacts/artifacts.component.scss
+++ b/angular-ui/src/app/components/artifacts/artifacts.component.scss
@@ -8,6 +8,7 @@ display: flex;
 flex-direction: row;
 justify-content: space-between;
 align-items: flex-start;
+max-height: calc(100vh - 190px);
 }
 
 .component-col {
